--- a/www.nass.gov.ng/38de11c9bf3c071e355654fcd88580c4181f395c.yml
+++ b/www.nass.gov.ng/38de11c9bf3c071e355654fcd88580c4181f395c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:21:35 GMT
+    - Thu, 15 Jun 2017 22:32:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IvUw4YjPtaL%2CoohNeqKrG0; path=/
+    - PHPSESSID=y9FvLbU-OtinqRCdMTSvr0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:21:35 GMT
+recorded_at: Thu, 15 Jun 2017 22:32:14 GMT
