--- a/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
+++ b/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:21:53 GMT
+    - Thu, 15 Jun 2017 22:32:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CUBGqFlZ0jk6z-sHDWNL33; path=/
+    - PHPSESSID=CJnpg-jDGQ9SO2Ugb9bE63; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:21:53 GMT
+recorded_at: Thu, 15 Jun 2017 22:32:41 GMT
