--- a/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
+++ b/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:29:52 GMT
+    - Thu, 15 Jun 2017 22:39:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A6OG1%2C7m6-JoA5f5lWIrF0; path=/
+    - PHPSESSID=%2Ctz4UQyyWBsut34WIjezV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:29:52 GMT
+recorded_at: Thu, 15 Jun 2017 22:39:08 GMT
