--- a/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
+++ b/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:31:33 GMT
+    - Thu, 15 Jun 2017 22:40:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tnedX6Nn2Zuv3RRYV9Pvc1; path=/
+    - PHPSESSID=8Fw-fNrcSQ98%2C%2Coq3WlYp1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:31:33 GMT
+recorded_at: Thu, 15 Jun 2017 22:40:22 GMT
