--- a/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
+++ b/www.nass.gov.ng/69a48311a7cfba996bf1a3951c9eb4e4ea4e481f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:33:13 GMT
+    - Thu, 15 Jun 2017 22:42:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RC%2ClvEjaYW1-JTEuuWRud1; path=/
+    - PHPSESSID=NyW5hkxhiGv9NgFfWlAjV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:33:13 GMT
+recorded_at: Thu, 15 Jun 2017 22:42:32 GMT
