--- a/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
+++ b/www.nass.gov.ng/413908201ff32080d6abe7d36fadd2a21f9a1ee7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:38:07 GMT
+    - Thu, 15 Jun 2017 22:46:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nwSIQC1%2Cyg1C4W6RZIh-N3; path=/
+    - PHPSESSID=JtpuYulHQP9rbkDDewAsL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:38:07 GMT
+recorded_at: Thu, 15 Jun 2017 22:46:07 GMT
