--- a/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
+++ b/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:38:35 GMT
+    - Thu, 15 Jun 2017 22:46:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b4vZPcVRixBHkrEtGTdH10; path=/
+    - PHPSESSID=K5g3%2C5Q3OafjV%2CUUrESHX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:38:35 GMT
+recorded_at: Thu, 15 Jun 2017 22:46:43 GMT
