--- a/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
+++ b/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:39:26 GMT
+    - Thu, 15 Jun 2017 22:47:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qPll5rT9N5SB4F%2C51-Ue10; path=/
+    - PHPSESSID=TopWrO9hJNUjLM4x5sO0e1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:39:26 GMT
+recorded_at: Thu, 15 Jun 2017 22:47:32 GMT
