--- a/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
+++ b/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:45:34 GMT
+    - Thu, 15 Jun 2017 22:53:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YZdNS0Jjq1r-8k4EgHscQ2; path=/
+    - PHPSESSID=%2CDgDWLqtk76O7VRZNt3GQ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:45:34 GMT
+recorded_at: Thu, 15 Jun 2017 22:53:59 GMT
