--- a/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
+++ b/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:51:16 GMT
+    - Thu, 15 Jun 2017 23:01:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A5Awkp-Aqpn%2CFHbTtDcWg2; path=/
+    - PHPSESSID=FEwW-gG7a1EsxJAy4G4jl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:51:16 GMT
+recorded_at: Thu, 15 Jun 2017 23:01:44 GMT
