--- a/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
+++ b/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:51:48 GMT
+    - Thu, 15 Jun 2017 23:02:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PSjGK15QSJ%2CTLDFVf9agF2; path=/
+    - PHPSESSID=Ud4QEPxGa-oZGpLcOR9UV0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:51:48 GMT
+recorded_at: Thu, 15 Jun 2017 23:02:04 GMT
