--- a/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
+++ b/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:52:07 GMT
+    - Thu, 15 Jun 2017 23:02:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PU8xD8S-pJQ-PRHp%2CLFg21; path=/
+    - PHPSESSID=W1u%2CPTyTPL52H6psmbox21; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:52:07 GMT
+recorded_at: Thu, 15 Jun 2017 23:02:36 GMT
