--- a/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
+++ b/www.nass.gov.ng/45ae3d777fa62a9816a5a152dff6fd58c3640b4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:53:47 GMT
+    - Thu, 15 Jun 2017 23:05:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DV%2CPpqLcFPv-WHWWB01pP1; path=/
+    - PHPSESSID=lxU-lP%2ChoJlNnPFwIAzL72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:53:47 GMT
+recorded_at: Thu, 15 Jun 2017 23:05:36 GMT
