--- a/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
+++ b/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:54:06 GMT
+    - Thu, 15 Jun 2017 23:06:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ua7ye%2CP08fiHT6xTpjdFN1; path=/
+    - PHPSESSID=SNNQL342cC76UOkiU7JLu2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:54:06 GMT
+recorded_at: Thu, 15 Jun 2017 23:06:09 GMT
