--- a/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
+++ b/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:54:26 GMT
+    - Thu, 15 Jun 2017 23:06:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z1%2C%2CVfGsoI%2CpHiYTPR2Ak2; path=/
+    - PHPSESSID=t91X3GhRb4lkLKv4raN-o0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:54:26 GMT
+recorded_at: Thu, 15 Jun 2017 23:06:52 GMT
