--- a/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
+++ b/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:55:12 GMT
+    - Thu, 15 Jun 2017 23:07:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Wk9cxIHTK%2CeeCYPEIel7Y1; path=/
+    - PHPSESSID=l-YpuydFNv-Hiuf6GXJBH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:55:12 GMT
+recorded_at: Thu, 15 Jun 2017 23:07:36 GMT
