--- a/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
+++ b/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:59:17 GMT
+    - Thu, 15 Jun 2017 23:13:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yaJn8QaAPLakenxa5eXkq3; path=/
+    - PHPSESSID=4%2Cl-s5Wu9tjP96YIR7IrA0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:59:17 GMT
+recorded_at: Thu, 15 Jun 2017 23:13:17 GMT
