--- a/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
+++ b/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:02:31 GMT
+    - Thu, 15 Jun 2017 23:16:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R%2CIniMSO99vxzZRZd6c2k2; path=/
+    - PHPSESSID=Gp0EREiiTbZQna%2Cjvolsy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:02:31 GMT
+recorded_at: Thu, 15 Jun 2017 23:16:40 GMT
