--- a/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
+++ b/www.nass.gov.ng/4ba0edcba58a219cf5184bf7a4093f59056937bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:03:33 GMT
+    - Thu, 15 Jun 2017 23:17:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CKhVPC5-FDf8zI%2CjZLPTG2; path=/
+    - PHPSESSID=8QKm9TXqM053E30s8Boqv2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:03:33 GMT
+recorded_at: Thu, 15 Jun 2017 23:17:26 GMT
