--- a/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
+++ b/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:03:54 GMT
+    - Thu, 15 Jun 2017 23:17:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8sPMLQTnpfXRmV4dgCI4y0; path=/
+    - PHPSESSID=6z9z8DL-HHVXb%2CVYNcrNM1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:03:54 GMT
+recorded_at: Thu, 15 Jun 2017 23:17:47 GMT
