--- a/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
+++ b/www.nass.gov.ng/a5edadbf6e4614a35c7079335c90f7e7f0c78fbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:04:31 GMT
+    - Thu, 15 Jun 2017 23:18:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gEKQpupps4oa1P-Nm025p2; path=/
+    - PHPSESSID=8V2krNVo%2CJ1b6%2CSpP3cfh2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:04:31 GMT
+recorded_at: Thu, 15 Jun 2017 23:18:28 GMT
