--- a/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
+++ b/www.nass.gov.ng/0e65f74ada4cd83f37dc32c82621731294a4e28e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:04:49 GMT
+    - Thu, 15 Jun 2017 23:18:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=14lKQdbwmM0x4IwONJkfy2; path=/
+    - PHPSESSID=f49%2C%2CNVhBEW0D%2CLhS5bkd0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:04:49 GMT
+recorded_at: Thu, 15 Jun 2017 23:18:52 GMT
