--- a/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
+++ b/www.nass.gov.ng/d17d90a474471ea3c96068bb0c4664398b4028ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:10:18 GMT
+    - Thu, 15 Jun 2017 23:24:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eG%2CtrE3YV6MVfnSTuOnFS0; path=/
+    - PHPSESSID=Im5LmLI2uXhDRxqc4kzme0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:10:18 GMT
+recorded_at: Thu, 15 Jun 2017 23:24:48 GMT
