--- a/www.nass.gov.ng/cfdaeae95b188af0b47a5e132f3852bf3d3ae6af.yml
+++ b/www.nass.gov.ng/cfdaeae95b188af0b47a5e132f3852bf3d3ae6af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:11:52 GMT
+    - Thu, 15 Jun 2017 23:26:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=btLTVmq5B6PbxWwbvK-%2Ct0; path=/
+    - PHPSESSID=VcVg3y2L4OL7Kb%2CbAR5L-1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:11:52 GMT
+recorded_at: Thu, 15 Jun 2017 23:26:56 GMT
