--- a/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
+++ b/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:14:28 GMT
+    - Thu, 15 Jun 2017 23:31:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Duy0XMMml2ctIQQ%2CIA%2CVV2; path=/
+    - PHPSESSID=8xcZYEjDySmQb4EXGRWfr2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:14:28 GMT
+recorded_at: Thu, 15 Jun 2017 23:31:19 GMT
