--- a/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
+++ b/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:15:41 GMT
+    - Thu, 15 Jun 2017 23:33:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fLIH%2CGW40JxNnUnmU7Tzv1; path=/
+    - PHPSESSID=31Jw8JOgU1jVH8vBuGOc71; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:15:41 GMT
+recorded_at: Thu, 15 Jun 2017 23:33:04 GMT
