--- a/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
+++ b/www.nass.gov.ng/f474511667a5a0d2209ded44531ce8192effd64b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:17:48 GMT
+    - Thu, 15 Jun 2017 23:35:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u2VaCGFZZE%2Cld60Qwl5Uk1; path=/
+    - PHPSESSID=QPXo3byMLbs6gPcogf-jx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:17:48 GMT
+recorded_at: Thu, 15 Jun 2017 23:35:19 GMT
