--- a/www.nass.gov.ng/6e9fe66ca2da16a7f57092a3cce85b9212127ad6.yml
+++ b/www.nass.gov.ng/6e9fe66ca2da16a7f57092a3cce85b9212127ad6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:18:42 GMT
+    - Thu, 15 Jun 2017 23:35:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qmMzoW3Ae9jZB%2C%2CON2HvQ3; path=/
+    - PHPSESSID=NC%2CnbOo0T0Uo1LZX4iGNk2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:18:42 GMT
+recorded_at: Thu, 15 Jun 2017 23:35:39 GMT
