--- a/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
+++ b/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:21:42 GMT
+    - Thu, 15 Jun 2017 23:39:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c8XrZkJujUljK7%2C%2CRjU1r1; path=/
+    - PHPSESSID=ZVu4Q0HWfoFzL%2CYexf2CB2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:21:42 GMT
+recorded_at: Thu, 15 Jun 2017 23:39:43 GMT
