--- a/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
+++ b/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:22:00 GMT
+    - Thu, 15 Jun 2017 23:40:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hV0xEZG3rjm-c9Dwuul7%2C1; path=/
+    - PHPSESSID=0ApqyVZ9cWTxnz-vXoJRl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:22:00 GMT
+recorded_at: Thu, 15 Jun 2017 23:40:04 GMT
