--- a/www.nass.gov.ng/c225a0e9981b860539b557438e22f0253c0ef986.yml
+++ b/www.nass.gov.ng/c225a0e9981b860539b557438e22f0253c0ef986.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:24:56 GMT
+    - Thu, 15 Jun 2017 23:44:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GOMHpi3so76FiL%2CaVEM5Z0; path=/
+    - PHPSESSID=ePPoweHm%2CT7nEJ7JZdTbl3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:24:56 GMT
+recorded_at: Thu, 15 Jun 2017 23:44:30 GMT
