--- a/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
+++ b/www.nass.gov.ng/88e5f4d49e2997901adef39797f3a2d567c7fb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:28:01 GMT
+    - Thu, 15 Jun 2017 23:47:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1jfBLa%2COENlFz-Tyu0j601; path=/
+    - PHPSESSID=lK327TGq9%2C08rMhdkFTB72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:28:01 GMT
+recorded_at: Thu, 15 Jun 2017 23:47:31 GMT
