--- a/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
+++ b/www.nass.gov.ng/f8cb59985283935fd75a65a5655d38728ff61607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:32:13 GMT
+    - Thu, 15 Jun 2017 23:51:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ow9WVRL%2CcVyzA9gni5Gqr2; path=/
+    - PHPSESSID=RDp4WEzm-8eaa%2Cl7ie0He2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:32:13 GMT
+recorded_at: Thu, 15 Jun 2017 23:51:30 GMT
