--- a/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
+++ b/www.nass.gov.ng/c03d22e2b8971049ea843fb1c5b610ec9550da75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:35:28 GMT
+    - Thu, 15 Jun 2017 23:53:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-VgHnvJWZlpfRRYTxfSgr0; path=/
+    - PHPSESSID=xqiSNMF3Ap1NP9d%2CUUbpr3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:35:28 GMT
+recorded_at: Thu, 15 Jun 2017 23:53:27 GMT
