--- a/www.nass.gov.ng/4ee166eb200e242c2717b6ca288852bbd34ebf5e.yml
+++ b/www.nass.gov.ng/4ee166eb200e242c2717b6ca288852bbd34ebf5e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:36:51 GMT
+    - Thu, 15 Jun 2017 23:55:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SrlK4%2CQ0Bdnpg5zZawrUS3; path=/
+    - PHPSESSID=kYG0isX27H6OpghrF26b90; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:36:51 GMT
+recorded_at: Thu, 15 Jun 2017 23:55:53 GMT
