--- a/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
+++ b/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:39:45 GMT
+    - Thu, 15 Jun 2017 23:58:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TxACY%2Cfd2CKXOJRoTtJBe3; path=/
+    - PHPSESSID=mjWPaeXnBgU80KTXqxTGh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:39:45 GMT
+recorded_at: Thu, 15 Jun 2017 23:58:38 GMT
