--- a/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
+++ b/www.nass.gov.ng/c6cd072de70dda983ee75b2528373246d8f8b2ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:41:24 GMT
+    - Thu, 15 Jun 2017 23:59:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lZOgq%2CsOdtyjz4%2CnE9n7p0; path=/
+    - PHPSESSID=VOHg5C8GExl%2CJ2XiFjcF92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:41:24 GMT
+recorded_at: Thu, 15 Jun 2017 23:59:48 GMT
