--- a/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
+++ b/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:45:22 GMT
+    - Fri, 16 Jun 2017 00:03:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tOMbxF5z-PDI%2CXtN4neFQ1; path=/
+    - PHPSESSID=yIiKCMuA0B2u2yhzDpxQY1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:45:22 GMT
+recorded_at: Fri, 16 Jun 2017 00:03:02 GMT
