--- a/www.nass.gov.ng/4fc74d41a3582a47bb15c88bb8e7ad73c6f04285.yml
+++ b/www.nass.gov.ng/4fc74d41a3582a47bb15c88bb8e7ad73c6f04285.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:46:37 GMT
+    - Fri, 16 Jun 2017 00:04:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sX91w935OMGQUCoQrSce-0; path=/
+    - PHPSESSID=3x%2CORsaXb2vcRfgSvPaET1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:46:37 GMT
+recorded_at: Fri, 16 Jun 2017 00:04:52 GMT
