--- a/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
+++ b/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:52:21 GMT
+    - Fri, 16 Jun 2017 00:10:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vJbvXZF0UBu%2CzPJ9UUdQL2; path=/
+    - PHPSESSID=ZfbCexZhhp85SYuA9Jjty0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:52:21 GMT
+recorded_at: Fri, 16 Jun 2017 00:10:18 GMT
