--- a/www.nass.gov.ng/7bc17c23332e367e7a202277da0e249adb23d713.yml
+++ b/www.nass.gov.ng/7bc17c23332e367e7a202277da0e249adb23d713.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:53:22 GMT
+    - Fri, 16 Jun 2017 00:11:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9mh48fM6YtnM%2CVAuVm1%2Cd1; path=/
+    - PHPSESSID=g1drBi1NbemxFl8dmGi0w2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:53:22 GMT
+recorded_at: Fri, 16 Jun 2017 00:11:18 GMT
