--- a/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
+++ b/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:54:51 GMT
+    - Fri, 16 Jun 2017 00:12:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=P6jc%2CMAry4kcM9w18%2CQOd0; path=/
+    - PHPSESSID=Zy8qsCefSTPREY9GwDSLk2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:54:51 GMT
+recorded_at: Fri, 16 Jun 2017 00:12:45 GMT
