--- a/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
+++ b/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:56:34 GMT
+    - Fri, 16 Jun 2017 00:14:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oiu%2CnGiNq0qcMtHEYG%2CLN2; path=/
+    - PHPSESSID=3y8iQUJkcB-d2fR24DKiG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:56:34 GMT
+recorded_at: Fri, 16 Jun 2017 00:14:39 GMT
