--- a/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
+++ b/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:58:24 GMT
+    - Fri, 16 Jun 2017 00:16:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zoIz%2CAXyF3Wsh06XJVmAe0; path=/
+    - PHPSESSID=9XLqurhhfL1y8b%2CgD0jI31; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:58:24 GMT
+recorded_at: Fri, 16 Jun 2017 00:16:00 GMT
