--- a/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
+++ b/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:05:57 GMT
+    - Fri, 16 Jun 2017 00:24:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RoNaKirZnVgE2KZn7K5pU3; path=/
+    - PHPSESSID=YmBSoPdah8Xa74SZ6f%2C9x1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:05:57 GMT
+recorded_at: Fri, 16 Jun 2017 00:24:06 GMT
