--- a/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
+++ b/www.nass.gov.ng/a4b506308f35817cca495593876d0aa32d9d6f72.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:07:21 GMT
+    - Fri, 16 Jun 2017 00:25:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hTxkX7r91A62yTgZ23zZT2; path=/
+    - PHPSESSID=JEtgbT%2Cmfz7oAWzqF3mk50; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:07:21 GMT
+recorded_at: Fri, 16 Jun 2017 00:25:11 GMT
