--- a/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
+++ b/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:08:01 GMT
+    - Fri, 16 Jun 2017 00:26:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XUapnMOpIJwruYgjLoOrM2; path=/
+    - PHPSESSID=IA4K0D0%2CBsNciAe%2CJCByu3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:08:01 GMT
+recorded_at: Fri, 16 Jun 2017 00:26:00 GMT
