--- a/www.nass.gov.ng/c3a8da3cb57fb9088aa3d5f8e5191a7321893bbc.yml
+++ b/www.nass.gov.ng/c3a8da3cb57fb9088aa3d5f8e5191a7321893bbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:11:07 GMT
+    - Fri, 16 Jun 2017 00:28:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=S%2CXokBnyGcUuJpEJ1rB%2Cw2; path=/
+    - PHPSESSID=m974qwVSY83DhyYIaVDeg2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:11:07 GMT
+recorded_at: Fri, 16 Jun 2017 00:28:58 GMT
