--- a/www.nass.gov.ng/465778f0890dd1c68576e18c65548be52f010873.yml
+++ b/www.nass.gov.ng/465778f0890dd1c68576e18c65548be52f010873.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:11:26 GMT
+    - Fri, 16 Jun 2017 00:29:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WvPdcFCqOiA25X16VSv%2CH1; path=/
+    - PHPSESSID=I2zT3AbipbrmRTKRQBYgZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:11:26 GMT
+recorded_at: Fri, 16 Jun 2017 00:29:16 GMT
